# oxideav-musepack

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
src/: cns.rs  container.rs  decoder.rs  ei_header.rs  frame_reconstruct.rs  framing.rs  huffman.rs  lib.rs  mpc_decode.rs  ms_stereo.rs  packet_stream.rs  reconstruct.rs  registry.rs  requant.rs  rg_header.rs  scf.rs  sh_header.rs  stream_shape.rs  sv7_band_decode.rs  sv7_band_header.rs  sv7_band_header_encode.rs  sv7_bitwriter.rs  sv7_file_decode.rs  sv7_file_encode.rs  sv7_frame_decode.rs  sv7_frame_encode.rs  sv7_header.rs  sv7_header_encode.rs  sv7_huffman_encode.rs  sv7_sample_encode.rs  sv7_scf_decode.rs  sv7_scf_encode.rs  sv7_stereo_frame.rs  sv7_stereo_frame_encode.rs  sv7_stream.rs  sv7_tables.rs  sv7_word_swap.rs  sv8.rs  sv8_band_decode.rs  sv8_band_header.rs  (+19 more)
tables/: cns-prng-params.csv  cns-prng-parity.csv  sv7-huffman-bandtype-header.csv  sv7-huffman-dscf.csv  sv7-huffman-q1.csv  sv7-huffman-q2.csv  sv7-huffman-q3.csv  sv7-huffman-q4.csv  sv7-huffman-q5.csv  sv7-huffman-q6.csv  sv7-huffman-q7.csv  sv7-huffman-scfi.csv  sv8-canonical-bands.csv  sv8-canonical-dscf-1.csv  sv8-canonical-dscf-2.csv  sv8-canonical-q1.csv  sv8-canonical-q2-1.csv  sv8-canonical-q2-2.csv  sv8-canonical-q3.csv  sv8-canonical-q4.csv  sv8-canonical-q5-1.csv  sv8-canonical-q5-2.csv  sv8-canonical-q6-1.csv  sv8-canonical-q6-2.csv  sv8-canonical-q7-1.csv  sv8-canonical-q7-2.csv  sv8-canonical-q8-1.csv  sv8-canonical-q8-2.csv  sv8-canonical-q9up.csv  sv8-canonical-res-1.csv  sv8-canonical-res-2.csv  sv8-canonical-scfi-1.csv  (+21 more)
(+28 files in other folders)
