[package]
name = "oxideav-musepack"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-musepack"
authors = ["Mark Karpeles"]
description = "Pure-Rust Musepack (SV7 + SV8) audio decoder for the oxideav framework"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-musepack"
keywords = ["multimedia", "audio", "musepack", "mpc", "codec"]
categories = ["multimedia::encoding", "multimedia::audio"]

[dependencies]
oxideav-core = "0.1"

# Self-contained workspace marker so `cargo test` from inside this crate
# does not walk up into the parent monorepo workspace (which currently
# contains other crates that also declare their own [workspace] block,
# causing cargo to error out with "multiple workspace roots"). The
# crate ships standalone via crates.io and is built standalone in CI;
# this empty workspace keeps in-tree test runs equally hermetic.
[workspace]
